--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -18,11 +18,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-img{
-    width: 100%;
-    filter: drop-shadow(2px 2px 5px #000);
-}
-.card{
+
+.card__arquera{
     width: 320px;
     margin: 100px auto;
     background-color: var(--color-card);
@@ -30,7 +27,10 @@ img{
     box-shadow: 0 0 16px -6px #0000005a;
     position: relative;
 }
-
+img{
+    width: 100%;
+    filter: drop-shadow(2px 2px 5px #000);
+}
 .card__figure{
    
     height: 300px;
@@ -68,14 +68,25 @@ img{
     position: relative;
     margin-top: 10px;
     bottom: 0;
-    border-top: 2px solid #c97b1c;
+    border-top: 2px solid #da3b70;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius:1rem ;
     background-color: #e95283;
     text-align: center;
-
+   
+    
+}
+/* .items{
+    padding: 1rem 1.5625rem;
+    border-right: 2px solid #da3b70;
+    color: #fff;
+    text-align: center;
+    text-justify: center;
 }
 
+.items:last-child{
+    border-right: none;
+} */
 .items{
     display: inline-block;
     width: 32.2%;
@@ -86,5 +97,5 @@ img{
 }
 .items:last-child {
     border-right: none;
-}
+} 
 
